--- a/DreamFactory.AddressBook/Content/Site.css
+++ b/DreamFactory.AddressBook/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.checkbox-list {
+    overflow-y: auto;
+    max-height:280px;
+    max-width: 280px;
+    height:auto !important;
+    height:280px;
+}
