--- a/DreamFactory.AddressBook/Views/ContactGroup/Edit.cshtml
+++ b/DreamFactory.AddressBook/Views/ContactGroup/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<br/>
+<br />
 <div class="row">
     <div class="col-md-8">
         <section id="editForm">
@@ -24,20 +24,21 @@
                 <div class="form-group">
                     @Html.Label("Contacts in group", new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @for (int i = 0; i < Model.Contacts.Count; i++)
-                        {
-                            <div class="checkbox">
-                                <label>
-                                <input data-val="true" id="contacts[@i].InGroup" name="contacts[@i].InGroup" type="checkbox" value="true" 
-                                       @if(Model.Contacts[i].InGroup){
-                                           @:checked="checked"
-                                       }>
-                                    <input name="contacts[@i].InGroup" type="hidden" value="false">
-                                    <input name="contacts[@i].ContactId" type="hidden" value="@Model.Contacts[i].ContactId">
-                                    @Model.Contacts[i].ContactName
-                                </label>
-                            </div>
-                        }
+                        <div class="checkbox-list">
+                            @for (int i = 0; i < Model.Contacts.Count; i++)
+                            {
+                                <div class="checkbox">
+                                    <label>
+                                        <input data-val="true" id="contacts[@i].InGroup" name="contacts[@i].InGroup" type="checkbox" value="true"
+                                               @if (Model.Contacts[i].InGroup) { @: checked="checked"
+                                                                                                                                                                                    }>
+                                        <input name="contacts[@i].InGroup" type="hidden" value="false">
+                                        <input name="contacts[@i].ContactId" type="hidden" value="@Model.Contacts[i].ContactId">
+                                        @Model.Contacts[i].ContactName
+                                    </label>
+                                </div>
+                            }
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
