Fixed disapperaing labels in checkbox list on submit.

--- a/DreamFactory.AddressBook/Views/ContactGroup/Edit.cshtml
+++ b/DreamFactory.AddressBook/Views/ContactGroup/Edit.cshtml
@@ -34,6 +34,7 @@
                                                                                                                                                                                     }>
                                         <input name="contacts[@i].InGroup" type="hidden" value="false">
                                         <input name="contacts[@i].ContactId" type="hidden" value="@Model.Contacts[i].ContactId">
+                                        <input name="contacts[@i].ContactName" type="hidden" value="@Model.Contacts[i].ContactName">
                                         @Model.Contacts[i].ContactName
                                     </label>
                                 </div>
