--- a/DreamFactory.AddressBook/Views/ContactGroup/Create.cshtml
+++ b/DreamFactory.AddressBook/Views/ContactGroup/Create.cshtml
@@ -32,6 +32,7 @@
                                         <input data-val="true" id="contacts[@i].InGroup" name="contacts[@i].InGroup" type="checkbox" value="true">
                                         <input name="contacts[@i].InGroup" type="hidden" value="false">
                                         <input name="contacts[@i].ContactId" type="hidden" value="@Model.Contacts[i].ContactId">
+                                        <input name="contacts[@i].ContactName" type="hidden" value="@Model.Contacts[i].ContactName">
                                         @Model.Contacts[i].ContactName
                                     </label>
                                 </div>
